docs/v2.3.0/_sources/gallery/workflow/plot_workflow_01.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/workflow/plot_workflow_01.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_workflow_plot_workflow_01.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_workflow_plot_workflow_01.py:


1x1 Coupler
===========

.. GENERATED FROM PYTHON SOURCE LINES 7-8

Importing the script dependencies

.. GENERATED FROM PYTHON SOURCE LINES 8-20

.. code-block:: Python

    from SuPyMode.workflow import (
        Workflow,
        fiber_loader,
        Boundaries,
        BoundaryValue,
        DomainAlignment,
    )
    from PyOptik import MaterialBank

    wavelength = 1550e-9









.. GENERATED FROM PYTHON SOURCE LINES 21-24

Generating the fiber structure
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Here we define the cladding and fiber structure to model the problem

.. GENERATED FROM PYTHON SOURCE LINES 24-33

.. code-block:: Python


    clad_refractive_index = MaterialBank.fused_silica.compute_refractive_index(
        wavelength
    )  # Refractive index of silica at the specified wavelength

    fiber = fiber_loader.load_fiber(
        "SMF28", clad_refractive_index=clad_refractive_index, remove_cladding=False
    )








.. GENERATED FROM PYTHON SOURCE LINES 34-35

Defining the boundaries of the system

.. GENERATED FROM PYTHON SOURCE LINES 35-40

.. code-block:: Python

    boundaries = [
        Boundaries(right=BoundaryValue.SYMMETRIC, top=BoundaryValue.SYMMETRIC),
        Boundaries(right=BoundaryValue.SYMMETRIC, top=BoundaryValue.ANTI_SYMMETRIC),
    ]








.. GENERATED FROM PYTHON SOURCE LINES 41-44

Generating the computing workflow
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Workflow class to define all the computation parameters before initializing the solver

.. GENERATED FROM PYTHON SOURCE LINES 44-65

.. code-block:: Python

    workflow = Workflow(
        fiber_list=[fiber],  # List of fiber to be added in the mesh, the order matters.
        wavelength=wavelength,  # Wavelength used for the mode computation.
        resolution=30,  # Number of point in the x and y axis [is divided by half if symmetric or anti-symmetric boundaries].
        x_bounds=DomainAlignment.LEFT,  # Mesh x-boundary structure.
        y_bounds=DomainAlignment.BOTTOM,  # Mesh y-boundary structure.
        boundaries=boundaries,  # Set of symmetries to be evaluated, each symmetry add a round of simulation
        n_sorted_mode=4,  # Total computed and sorted mode.
        n_added_mode=2,  # Additional computed mode that are not considered later except for field comparison [the higher the better but the slower].
        debug_mode=0,  # Print the iteration step for the solver plus some other important steps.
        auto_label=True,  # Auto labeling the mode. Label are not always correct and should be verified afterwards.
        itr_final=0.05,  # Final value of inverse taper ratio to simulate
        clad_rotation=0,  # Rotate the geoemtry in the given angle in degree
    )

    workflow.initialize_geometry(plot=False)  # Initialize the geometry and plot it

    workflow.run_solver()  # Run the solver to compute the modes

    _ = workflow.plot(plot_type="geometry")




.. image-sg:: /gallery/workflow/images/sphx_glr_plot_workflow_01_001.png
   :alt: plot workflow 01
   :srcset: /gallery/workflow/images/sphx_glr_plot_workflow_01_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    WARNING:matplotlib.font_manager:findfont: Font family ['cursive'] not found. Falling back to DejaVu Sans.
    WARNING:matplotlib.font_manager:findfont: Generic family 'cursive' not found because none of the following families were found: Apple Chancery, Textile, Zapf Chancery, Sand, Script MT, Felipa, Comic Neue, Comic Sans MS, cursive
    WARNING:matplotlib.font_manager:findfont: Font family ['Arial'] not found. Falling back to DejaVu Sans.
    WARNING:matplotlib.font_manager:findfont: Font family ['Arial'] not found. Falling back to DejaVu Sans.
    WARNING:matplotlib.font_manager:findfont: Font family ['Arial'] not found. Falling back to DejaVu Sans.
    WARNING:matplotlib.font_manager:findfont: Font family ['cursive'] not found. Falling back to DejaVu Sans.
    WARNING:matplotlib.font_manager:findfont: Generic family 'cursive' not found because none of the following families were found: Apple Chancery, Textile, Zapf Chancery, Sand, Script MT, Felipa, Comic Neue, Comic Sans MS, cursive




.. GENERATED FROM PYTHON SOURCE LINES 66-68

Field computation: :math:`E_{i,j}`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 68-70

.. code-block:: Python

    _ = workflow.plot(plot_type="field", itr_list=[1.0, 0.1])




.. image-sg:: /gallery/workflow/images/sphx_glr_plot_workflow_01_002.png
   :alt: $LP01$ slice: 0  itr: 1.000, $LP21_a$ slice: 0  itr: 1.000, $LP02$ slice: 0  itr: 1.000, $LP41_a$ slice: 0  itr: 1.000, $LP11_b$ slice: 0  itr: 1.000, $LP31_b$ slice: 0  itr: 1.000, $LP12_b$ slice: 0  itr: 1.000, $LP51_b$ slice: 0  itr: 1.000, $LP01$ slice: 473  itr: 0.099, $LP21_a$ slice: 473  itr: 0.099, $LP02$ slice: 473  itr: 0.099, $LP41_a$ slice: 473  itr: 0.099, $LP11_b$ slice: 473  itr: 0.099, $LP31_b$ slice: 473  itr: 0.099, $LP12_b$ slice: 473  itr: 0.099, $LP51_b$ slice: 473  itr: 0.099
   :srcset: /gallery/workflow/images/sphx_glr_plot_workflow_01_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 71-73

Effective index: :math:`n^{eff}_{i,j}`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 73-75

.. code-block:: Python

    _ = workflow.plot(plot_type="index")




.. image-sg:: /gallery/workflow/images/sphx_glr_plot_workflow_01_003.png
   :alt: plot workflow 01
   :srcset: /gallery/workflow/images/sphx_glr_plot_workflow_01_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 76-78

Modal normalized coupling: :math:`C_{i,j}`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 78-80

.. code-block:: Python

    _ = workflow.plot(plot_type="normalized-coupling")




.. image-sg:: /gallery/workflow/images/sphx_glr_plot_workflow_01_004.png
   :alt: plot workflow 01
   :srcset: /gallery/workflow/images/sphx_glr_plot_workflow_01_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 81-83

Adiabatic criterion: :math:`\tilde{C}_{i,j}`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 83-86

.. code-block:: Python

    _ = workflow.plot(plot_type="adiabatic")

    # -



.. image-sg:: /gallery/workflow/images/sphx_glr_plot_workflow_01_005.png
   :alt: plot workflow 01
   :srcset: /gallery/workflow/images/sphx_glr_plot_workflow_01_005.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 6.995 seconds)


.. _sphx_glr_download_gallery_workflow_plot_workflow_01.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_workflow_01.ipynb <plot_workflow_01.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_workflow_01.py <plot_workflow_01.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_workflow_01.zip <plot_workflow_01.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
